FND-2201: Ticket config classes and logic classes