@@ -14,9 +14,57 @@
 	<name>connect-ticketconfig-service</name>
 	<description>Connect+ Ticketconfig Service implementation</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>15</java.version>
+		<starters.version>2.4.6</starters.version>
+		<spring.boot.maven-plugin.version>2.3.5.RELEASE</spring.boot.maven-plugin.version>
+		<couchbase.java-client.version>2.7.9</couchbase.java-client.version>
+		<io.grpc.version>1.31.1</io.grpc.version>
+		<lombok.version>1.18.20</lombok.version>
+		<jackson.version>2.12.2</jackson.version>
+		<protobuf-commons.version>0.70-SNAPSHOT</protobuf-commons.version>
+		<goeuroconnect.core.version>1.0.66</goeuroconnect.core.version>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>GoEuro Nexus</id>
+			<name>GoEuro Central</name>
+			<url>http://nexus.goeuro.int/content/groups/goeuro/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+		<repository>
+			<id>github</id>
+			<url>https://maven.pkg.github.com/goeuro/java-packages</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+	</repositories>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.omio.spring.starter</groupId>
+				<artifactId>starter-bom</artifactId>
+				<version>${starters.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
+		<!-- SPRING -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -24,8 +72,169 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-json</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>4.3.8.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>29.0-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.mockito</groupId>
+					<artifactId>mockito-all</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<!-- GENERAL -->
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-stub</artifactId>
+			<version>${io.grpc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-protobuf</artifactId>
+			<version>${io.grpc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-netty-shaded</artifactId>
+			<version>${io.grpc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-services</artifactId>
+			<version>${io.grpc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-netty</artifactId>
+			<version>${io.grpc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.couchbase.client</groupId>
+			<artifactId>java-client</artifactId>
+			<version>${couchbase.java-client.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.projectreactor.addons</groupId>
+			<artifactId>reactor-extra</artifactId>
+			<version>3.3.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<!-- OMIO -->
+		<dependency>
+			<groupId>com.omio.spring.starter</groupId>
+			<artifactId>starter-module-resttemplate</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.omio.spring.starter</groupId>
+			<artifactId>starter-pack-base</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.omio.spring.starter</groupId>
+			<artifactId>starter-module-logback</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.omio.spring.starter</groupId>
+			<artifactId>starter-module-metrics</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.omio.spring.starter</groupId>
+			<artifactId>starter-module-environment</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.omio.spring.starter</groupId>
+			<artifactId>starter-module-actuator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.goeuro.coverage.goeuroconnect</groupId>
+			<artifactId>provider-config-client</artifactId>
+			<version>${goeuroconnect.core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.goeuro.coverage.goeuroconnect</groupId>
+			<artifactId>goeuro-connect-java-client</artifactId>
+			<version>${goeuroconnect.core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.goeuro.protobuf-commons</groupId>
+			<artifactId>protobuf-commons</artifactId>
+			<version>${protobuf-commons.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>io.grpc</groupId>
+					<artifactId>grpc-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>io.grpc</groupId>
+					<artifactId>grpc-netty</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
@@ -34,6 +243,78 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring.boot.maven-plugin.version}</version>
+				<configuration>
+					<jvmArguments>--enable-preview</jvmArguments>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.github.odavid.maven.plugins</groupId>
+				<artifactId>mixin-maven-plugin</artifactId>
+				<version>0.1-alpha-40</version>
+				<extensions>true</extensions>
+				<configuration>
+					<mixins>
+						<mixin>
+							<groupId>com.omio.spring.starter</groupId>
+							<artifactId>starter-mixin-base</artifactId>
+							<version>${starters.version}</version>
+						</mixin>
+						<mixin>
+							<groupId>com.omio.spring.starter</groupId>
+							<artifactId>starter-mixin-spotless</artifactId>
+							<version>${starters.version}</version>
+						</mixin>
+						<mixin>
+							<groupId>com.omio.spring.starter</groupId>
+							<artifactId>starter-mixin-docker</artifactId>
+							<version>${starters.version}</version>
+						</mixin>
+						<mixin>
+							<groupId>com.omio.spring.starter</groupId>
+							<artifactId>starter-mixin-sonarqube</artifactId>
+							<version>${starters.version}</version>
+						</mixin>
+					</mixins>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
